# rust-mysql-project

./: .gitignore  Cargo.toml
migrations/2021-02-16-232226_bj_products/: down.sql  up.sql
migrations/2021-02-17-151130_talenti_products/: down.sql  up.sql
src/: lib.rs  models.rs  schema.rs
