[package]
name = "icecream_sql"
version = "0.1.0"
authors = ["Khalid Ali <khalludi123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["chrono", "mysql", "numeric"] }
dotenv = "0.15.0"
csv = "1.1"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }